crates/ralph-tui/tests/snapshots/integration_snapshots__footer_iter2.snap
---
source: crates/ralph-tui/tests/integration_snapshots.rs
expression: harness.render_footer()
---
──────────────────────────────────────────────────────────────────────────────── Last: build.done                                                   ◉ active
