crates/ralph-tui/tests/snapshots/integration_snapshots__footer_with_alert.snap
---
source: crates/ralph-tui/tests/integration_snapshots.rs
expression: harness.render_footer()
---
──────────────────────────────────────────────────────────────────────────────── ▶ New: iter 3 │ Last: —                                              ■ done
